vpc2.json
{
   "Resources":{
      "VPC":{
         "Type":"AWS::EC2::VPC",
         "Properties":{
            "CidrBlock":"10.0.0.0/16",
            "Tags":[
               {
                  "Key":"Cloud Crowd VPC"
               }
            ]
         }
      },
      "PublicSubnet1":{
         "Type":"AWS::EC2::Subnet",
         "Properties":{
            "VpcId":{
               "Ref":"VPC"
            },
            "AvailabilityZone":{
               "Fn::Select":[
                  "0",
                  {
                     "Fn::GetAZs":""
                  }
               ]
            },
            "CidrBlock":"10.0.0.0/24",
            "MapPublicIpOnLaunch":true,
            "Tags":[
               {
                  "Key":"Public Subnet"
               }
            ]
         }
      },
      "PrivateSubnet1":{
         "Type":"AWS::EC2::Subnet",
         "Properties":{
            "VpcId":{
               "Ref":"VPC"
            },
            "AvailabilityZone":{
               "Fn::Select":[
                  "0",
                  {
                     "Fn::GetAZs":""
                  }
               ]
            },
            "CidrBlock":"10.0.1.0/24",
            "MapPublicIpOnLaunch":false,
            "Tags":[
               {
                  "Key":"Private Subnet"
               }
            ]
         }
      },
      "PrivateSubnet2":{
         "Type":"AWS::EC2::Subnet",
         "Properties":{
            "VpcId":{
               "Ref":"VPC"
            },
            "AvailabilityZone":{
               "Fn::Select":[
                  "0",
                  {
                     "Fn::GetAZs":""
                  }
               ]
            },
            "CidrBlock":"10.0.2.0/24",
            "MapPublicIpOnLaunch":false,
            "Tags":[
               {
                  "Key":"Private Subnet 2"
               }
            ]
         }
      },
      "InternetGateway":{
         "Type":"AWS::EC2::InternetGateway"
      },
      "GatewayToInternet":{
         "Type":"AWS::EC2::VPCGatewayAttachment",
         "Properties":{
            "VpcId":{
               "Ref":"VPC"
            },
            "InternetGatewayId":{
               "Ref":"InternetGateway"
            }
         }
      },
      "PublicRouteTable":{
         "Type":"AWS::EC2::RouteTable",
         "Properties":{
            "VpcId":{
               "Ref":"VPC"
            }
         }
      },
      "PublicRoute":{
         "Type":"AWS::EC2::Route",
         "DependsOn":"GatewayToInternet",
         "Properties":{
            "RouteTableId":{
               "Ref":"PublicRouteTable"
            },
            "DestinationCidrBlock":"0.0.0.0/0",
            "GatewayId":{
               "Ref":"InternetGateway"
            }
         }
      },
      "PublicSubnet1RouteTableAssociation":{
         "Type":"AWS::EC2::SubnetRouteTableAssociation",
         "Properties":{
            "SubnetId":{
               "Ref":"PublicSubnet1"
            },
            "RouteTableId":{
               "Ref":"PublicRouteTable"
            }
         }
      },
      "NatGateway":{
         "Type":"AWS::EC2::NatGateway",
         "DependsOn":"NatPublicIP",
         "Properties":{
            "SubnetId":{
               "Ref":"PublicSubnet1"
            },
            "AllocationId":{
               "Fn::GetAtt":[
                  "NatPublicIP",
                  "AllocationId"
               ]
            }
         }
      },
      "NatPublicIP":{
         "Type":"AWS::EC2::EIP",
         "DependsOn":"VPC",
         "Properties":{
            "Domain":"vpc"
         }
      },
      "PrivateRouteTable":{
         "Type":"AWS::EC2::RouteTable",
         "Properties":{
            "VpcId":{
               "Ref":"VPC"
            }
         }
      },
      "PrivateRoute":{
         "Type":"AWS::EC2::Route",
         "Properties":{
            "NatGatewayId":{
               "Ref":"NatGateway"
            },
            "RouteTableId":{
               "Ref":"PrivateRouteTable"
            },
            "DestinationCidrBlock":"0.0.0.0/0"
         }
      },
      "PrivateSubnet1RouteTableAssociation":{
         "Type":"AWS::EC2::SubnetRouteTableAssociation",
         "Properties":{
            "SubnetId":{
               "Ref":"PrivateSubnet1"
            },
            "RouteTableId":{
               "Ref":"PrivateRouteTable"
            }
         }
      },
      "PrivateSubnet2RouteTableAssociation":{
         "Type":"AWS::EC2::SubnetRouteTableAssociation",
         "Properties":{
            "SubnetId":{
               "Ref":"PrivateSubnet2"
            },
            "RouteTableId":{
               "Ref":"PrivateRouteTable"
            }
         }
      },
      "cloudcrowdpublicsecuritygroup":{
         "Type":"AWS::EC2::SecurityGroup",
         "Properties":{
            "GroupDescription":"Public Security group for public access EC2",
            "VpcId":{
               "Ref":"VPC"
            },
            "SecurityGroupIngress":[
               {
                  "IpProtocol":"tcp",
                  "FromPort":22,
                  "ToPort":22,
                  "CidrIp":"0.0.0.0/0"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":80,
                  "ToPort":80,
                  "CidrIp":"0.0.0.0/0"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":443,
                  "ToPort":443,
                  "CidrIp":"0.0.0.0/0"
               }
            ],
            "SecurityGroupEgress":{
               "IpProtocol":-1,
               "FromPort":0,
               "ToPort":65535,
               "CidrIp":"0.0.0.0/0"
            },
            "Tags":[
               {
                  "Key":"cloud crowd public security group"
               }
            ]
         }
      },
      "cloudcrowdprivatesecuritygroup":{
         "Type":"AWS::EC2::SecurityGroup",
         "Properties":{
            "GroupDescription":"Private Security group for private access DynamoDb",
            "VpcId":{
               "Ref":"VPC"
            },
            "SecurityGroupIngress":[
               {
                  "IpProtocol":"tcp",
                  "FromPort":443,
                  "ToPort":443,
                  "SourceSecurityGroupId":{
                     "Fn::GetAtt":[
                        "cloudcrowdpublicsecuritygroup",
                        "GroupId"
                     ]
                  }
               }
            ],
            "SecurityGroupEgress":{
               "IpProtocol":-1,
               "FromPort":0,
               "ToPort":65535,
               "CidrIp":"0.0.0.0/0"
            },
            "Tags":[
               {
                  "Key":"cloud crowd private security group"
               }
            ]
         }
      },
      "DynamoDbSubnetGroup":{
         "Type":"AWS::DAX::SubnetGroup",
         "Properties":{
            "SubnetGroupName":"dynamodb-subnet-group",
            "Description":"Description of Dynamodb subnet group",
            "SubnetIds":[
               {
                  "Ref":"PrivateSubnet1",
                  "Ref":"PrivateSubnet2"
               }
            ]
         }
      }
   }
}
